--- a/Standalone/Standalone.vbproj
+++ b/Standalone/Standalone.vbproj
@@ -23,11 +23,12 @@
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
+    <UpdateRequired>true</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>https://raw.githubusercontent.com/jean0205/Standalone/master/Standalone/publish/</InstallUrl>
     <UpdateUrl>https://raw.githubusercontent.com/jean0205/Standalone/master/Standalone/publish/</UpdateUrl>
-    <ApplicationRevision>26</ApplicationRevision>
+    <MinimumRequiredVersion>1.0.0.26</MinimumRequiredVersion>
+    <ApplicationRevision>27</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
